fix TOC sticky positioning by removing overflow-x-hidden   - Remove overflow-x-hidden from blog page main container that was creating stacking context preventing sticky positioning   - Remove overflow-x: hidden from body element in globals.css that was interfering with sticky behavior   - Remove hidden lg:block class from TableOfContents component wrapper   - Fix image paths in MDX content from /images/icon/ to /content/images/icon/

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -217,7 +217,6 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     min-height: 100%;
-    overflow-x: hidden;
     --tw-bg-opacity: 1;
     background-color: rgb(var(--ui-background) / var(--tw-bg-opacity, 1));
     --tw-text-opacity: 1;
